Funtion save and cancel added.

--- a/System HR/System HR/UserInterface.csproj
+++ b/System HR/System HR/UserInterface.csproj
@@ -52,6 +52,24 @@
     <Compile Include="Forms\Contracts\ContractsForm.Designer.cs">
       <DependentUpon>ContractsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Employees\Base\BaseAddEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Employees\Base\BaseAddEditForm.Designer.cs">
+      <DependentUpon>BaseAddEditForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Employees\Base\BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Employees\Base\BaseForm.Designer.cs">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Employees\EmployeeAddForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Employees\EmployeeAddForm.Designer.cs">
+      <DependentUpon>EmployeeAddForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Employees\EmployeesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +88,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\Contracts\ContractsForm.resx">
       <DependentUpon>ContractsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Employees\Base\BaseAddEditForm.resx">
+      <DependentUpon>BaseAddEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Employees\Base\BaseForm.resx">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Employees\EmployeeAddForm.resx">
+      <DependentUpon>EmployeeAddForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Employees\EmployeesForm.resx">
       <DependentUpon>EmployeesForm.cs</DependentUpon>
@@ -142,6 +169,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\email_24.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\employee_64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel_32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
