--- a/System HR/DataAccessLayer/DataAccessLayer.csproj
+++ b/System HR/DataAccessLayer/DataAccessLayer.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,11 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalConfig.cs" />
+    <Compile Include="IDataConnection.cs" />
     <Compile Include="Models\Dictionaries\GenderModel.cs" />
     <Compile Include="Models\Dictionaries\StatusModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\EntityModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlConnector.cs" />
+    <Compile Include="TextConnector.cs" />
     <Compile Include="ViewModel\EmployeeViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
